fix: multiple form errors on /outfits/new
1. All clothes being selected when submitting empty form
2. Errors showing twice when sending empty form
3. Allowing to create outfits with less than 2 clothing items
4. Allowing outfit names to be too long (more than 20 characters)

--- a/flaskr/static/css/index.css
+++ b/flaskr/static/css/index.css
@@ -556,6 +556,40 @@ video {
   display: none;
 }
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
 .sr-only{
   position: absolute;
   width: 1px;
@@ -908,6 +942,16 @@ video {
   max-width: 20rem;
 }
 
+.max-w-fit{
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+}
+
+.max-w-max{
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+
 .translate-y-4{
   --tw-translate-y: 1rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -999,6 +1043,14 @@ video {
 
 .scroll-smooth{
   scroll-behavior: smooth;
+}
+
+.break-words{
+  overflow-wrap: break-word;
+}
+
+.break-all{
+  word-break: break-all;
 }
 
 .rounded{
@@ -1340,10 +1392,14 @@ video {
   a-z-a--z: \-\.;
 }
 
+[x-cloak] {
+  display: none !important;
+}
+
 .htmx-request {
   animation:
-		loadingWidth 0.25s forwards,
-		loadingColor 0.5s infinite;
+    loadingWidth 0.25s forwards,
+    loadingColor 0.5s infinite;
 }
 
 @keyframes loadingWidth {
